changing evidence to expand rather than tooltip * having a mouseover tooltip covered a lot of other content - not ideal * expand is used several other places on the site - less interface elements for the user * there are better ways to draw attention to evidence since hover actions get trigged accidentally very easily * NOTE: this may cause formatting issues if we have inline evidence

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -650,6 +650,16 @@ div#create-prompt {
   -moz-opacity:1;
 }
 
+.evidence {
+  cursor:pointer;
+}
+
+.evidence-more-text {
+  text-align:center;
+  margin-bottom:-0.5em;
+  display:none;
+}
+
 div.more {
   cursor:pointer;
   position:relative;
@@ -1960,7 +1970,8 @@ div.active {background: url(/img/ui_widgets/blue_minus_small.png) no-repeat;}
 .tooltip {
 	margin-left: 7px;
 	padding:0 0 0 20px;
-	background:url(/img/ui_widgets/evidence-icon.png) no-repeat;
+    cursor:pointer;
+/* 	background:url(/img/ui_widgets/evidence-icon.png) no-repeat; */
 }
 
 .exprbox {
